Added missing encode relating endpoints
